src/dbms/generated/SimpleSQLParser.py
# Generated from grammar/SimpleSQL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SimpleSQLParser ( Parser ):

    grammarFileName = "SimpleSQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'CREATE'", "'TABLE'", "'INSERT'", "'INTO'", 
                     "'VALUES'", "'SELECT'", "'FROM'", "'WHERE'", "'UPDATE'", 
                     "'SET'", "'DELETE'", "'AND'", "'OR'", "'*'", "'='", 
                     "','", "'('", "')'", "'INT'", "'BOOL'", "'TEXT'", "'TRUE'", 
                     "'FALSE'" ]

    symbolicNames = [ "<INVALID>", "CREATE", "TABLE", "INSERT", "INTO", 
                      "VALUES", "SELECT", "FROM", "WHERE", "UPDATE", "SET", 
                      "DELETE", "AND", "OR", "STAR", "EQ", "COMMA", "LPAREN", 
                      "RPAREN", "INT_T", "BOOL_T", "TEXT_T", "TRUE", "FALSE", 
                      "INTEGER_LITERAL", "IDENTIFIER", "STRING_LITERAL", 
                      "WS" ]

    RULE_statement = 0
    RULE_createTable = 1
    RULE_insertInto = 2
    RULE_selectStmt = 3
    RULE_updateStmt = 4
    RULE_deleteStmt = 5
    RULE_selectColumns = 6
    RULE_columnList = 7
    RULE_columnDef = 8
    RULE_columnDefList = 9
    RULE_typeName = 10
    RULE_valueList = 11
    RULE_valueLit = 12
    RULE_whereExpr = 13
    RULE_whereOr = 14
    RULE_whereAnd = 15
    RULE_whereAtom = 16
    RULE_assignmentList = 17
    RULE_assignment = 18
    RULE_identifier = 19
    RULE_stringLiteral = 20

    ruleNames =  [ "statement", "createTable", "insertInto", "selectStmt", 
                   "updateStmt", "deleteStmt", "selectColumns", "columnList", 
                   "columnDef", "columnDefList", "typeName", "valueList", 
                   "valueLit", "whereExpr", "whereOr", "whereAnd", "whereAtom", 
                   "assignmentList", "assignment", "identifier", "stringLiteral" ]

    EOF = Token.EOF
    CREATE=1
    TABLE=2
    INSERT=3
    INTO=4
    VALUES=5
    SELECT=6
    FROM=7
    WHERE=8
    UPDATE=9
    SET=10
    DELETE=11
    AND=12
    OR=13
    STAR=14
    EQ=15
    COMMA=16
    LPAREN=17
    RPAREN=18
    INT_T=19
    BOOL_T=20
    TEXT_T=21
    TRUE=22
    FALSE=23
    INTEGER_LITERAL=24
    IDENTIFIER=25
    STRING_LITERAL=26
    WS=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def createTable(self):
            return self.getTypedRuleContext(SimpleSQLParser.CreateTableContext,0)


        def insertInto(self):
            return self.getTypedRuleContext(SimpleSQLParser.InsertIntoContext,0)


        def selectStmt(self):
            return self.getTypedRuleContext(SimpleSQLParser.SelectStmtContext,0)


        def updateStmt(self):
            return self.getTypedRuleContext(SimpleSQLParser.UpdateStmtContext,0)


        def deleteStmt(self):
            return self.getTypedRuleContext(SimpleSQLParser.DeleteStmtContext,0)


        def getRuleIndex(self):
            return SimpleSQLParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SimpleSQLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_statement)
        try:
            self.state = 47
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.createTable()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.insertInto()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 44
                self.selectStmt()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 4)
                self.state = 45
                self.updateStmt()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 5)
                self.state = 46
                self.deleteStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateTableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(SimpleSQLParser.CREATE, 0)

        def TABLE(self):
            return self.getToken(SimpleSQLParser.TABLE, 0)

        def identifier(self):
            return self.getTypedRuleContext(SimpleSQLParser.IdentifierContext,0)


        def LPAREN(self):
            return self.getToken(SimpleSQLParser.LPAREN, 0)

        def columnDefList(self):
            return self.getTypedRuleContext(SimpleSQLParser.ColumnDefListContext,0)


        def RPAREN(self):
            return self.getToken(SimpleSQLParser.RPAREN, 0)

        def getRuleIndex(self):
            return SimpleSQLParser.RULE_createTable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateTable" ):
                return visitor.visitCreateTable(self)
            else:
                return visitor.visitChildren(self)




    def createTable(self):

        localctx = SimpleSQLParser.CreateTableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_createTable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(SimpleSQLParser.CREATE)
            self.state = 50
            self.match(SimpleSQLParser.TABLE)
            self.state = 51
            self.identifier()
            self.state = 52
            self.match(SimpleSQLParser.LPAREN)
            self.state = 53
            self.columnDefList()
            self.state = 54
            self.match(SimpleSQLParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertIntoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSERT(self):
            return self.getToken(SimpleSQLParser.INSERT, 0)

        def INTO(self):
            return self.getToken(SimpleSQLParser.INTO, 0)

        def identifier(self):
            return self.getTypedRuleContext(SimpleSQLParser.IdentifierContext,0)


        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleSQLParser.LPAREN)
            else:
                return self.getToken(SimpleSQLParser.LPAREN, i)

        def columnList(self):
            return self.getTypedRuleContext(SimpleSQLParser.ColumnListContext,0)


        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleSQLParser.RPAREN)
            else:
                return self.getToken(SimpleSQLParser.RPAREN, i)

        def VALUES(self):
            return self.getToken(SimpleSQLParser.VALUES, 0)

        def valueList(self):
            return self.getTypedRuleContext(SimpleSQLParser.ValueListContext,0)


        def getRuleIndex(self):
            return SimpleSQLParser.RULE_insertInto

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInsertInto" ):
                return visitor.visitInsertInto(self)
            else:
                return visitor.visitChildren(self)




    def insertInto(self):

        localctx = SimpleSQLParser.InsertIntoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_insertInto)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(SimpleSQLParser.INSERT)
            self.state = 57
            self.match(SimpleSQLParser.INTO)
            self.state = 58
            self.identifier()
            self.state = 59
            self.match(SimpleSQLParser.LPAREN)
            self.state = 60
            self.columnList()
            self.state = 61
            self.match(SimpleSQLParser.RPAREN)
            self.state = 62
            self.match(SimpleSQLParser.VALUES)
            self.state = 63
            self.match(SimpleSQLParser.LPAREN)
            self.state = 64
            self.valueList()
            self.state = 65
            self.match(SimpleSQLParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(SimpleSQLParser.SELECT, 0)

        def selectColumns(self):
            return self.getTypedRuleContext(SimpleSQLParser.SelectColumnsContext,0)


        def FROM(self):
            return self.getToken(SimpleSQLParser.FROM, 0)

        def identifier(self):
            return self.getTypedRuleContext(SimpleSQLParser.IdentifierContext,0)


        def WHERE(self):
            return self.getToken(SimpleSQLParser.WHERE, 0)

        def whereExpr(self):
            return self.getTypedRuleContext(SimpleSQLParser.WhereExprContext,0)


        def getRuleIndex(self):
            return SimpleSQLParser.RULE_selectStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectStmt" ):
                return visitor.visitSelectStmt(self)
            else:
                return visitor.visitChildren(self)




    def selectStmt(self):

        localctx = SimpleSQLParser.SelectStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_selectStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(SimpleSQLParser.SELECT)
            self.state = 68
            self.selectColumns()
            self.state = 69
            self.match(SimpleSQLParser.FROM)
            self.state = 70
            self.identifier()
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 71
                self.match(SimpleSQLParser.WHERE)
                self.state = 72
                self.whereExpr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpdateStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UPDATE(self):
            return self.getToken(SimpleSQLParser.UPDATE, 0)

        def identifier(self):
            return self.getTypedRuleContext(SimpleSQLParser.IdentifierContext,0)


        def SET(self):
            return self.getToken(SimpleSQLParser.SET, 0)

        def assignmentList(self):
            return self.getTypedRuleContext(SimpleSQLParser.AssignmentListContext,0)


        def WHERE(self):
            return self.getToken(SimpleSQLParser.WHERE, 0)

        def whereExpr(self):
            return self.getTypedRuleContext(SimpleSQLParser.WhereExprContext,0)


        def getRuleIndex(self):
            return SimpleSQLParser.RULE_updateStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUpdateStmt" ):
                return visitor.visitUpdateStmt(self)
            else:
                return visitor.visitChildren(self)




    def updateStmt(self):

        localctx = SimpleSQLParser.UpdateStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_updateStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(SimpleSQLParser.UPDATE)
            self.state = 76
            self.identifier()
            self.state = 77
            self.match(SimpleSQLParser.SET)
            self.state = 78
            self.assignmentList()
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 79
                self.match(SimpleSQLParser.WHERE)
                self.state = 80
                self.whereExpr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeleteStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DELETE(self):
            return self.getToken(SimpleSQLParser.DELETE, 0)

        def FROM(self):
            return self.getToken(SimpleSQLParser.FROM, 0)

        def identifier(self):
            return self.getTypedRuleContext(SimpleSQLParser.IdentifierContext,0)


        def WHERE(self):
            return self.getToken(SimpleSQLParser.WHERE, 0)

        def whereExpr(self):
            return self.getTypedRuleContext(SimpleSQLParser.WhereExprContext,0)


        def getRuleIndex(self):
            return SimpleSQLParser.RULE_deleteStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeleteStmt" ):
                return visitor.visitDeleteStmt(self)
            else:
                return visitor.visitChildren(self)




    def deleteStmt(self):

        localctx = SimpleSQLParser.DeleteStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_deleteStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(SimpleSQLParser.DELETE)
            self.state = 84
            self.match(SimpleSQLParser.FROM)
            self.state = 85
            self.identifier()
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 86
                self.match(SimpleSQLParser.WHERE)
                self.state = 87
                self.whereExpr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectColumnsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STAR(self):
            return self.getToken(SimpleSQLParser.STAR, 0)

        def columnList(self):
            return self.getTypedRuleContext(SimpleSQLParser.ColumnListContext,0)


        def getRuleIndex(self):
            return SimpleSQLParser.RULE_selectColumns

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectColumns" ):
                return visitor.visitSelectColumns(self)
            else:
                return visitor.visitChildren(self)




    def selectColumns(self):

        localctx = SimpleSQLParser.SelectColumnsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_selectColumns)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.match(SimpleSQLParser.STAR)
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.columnList()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleSQLParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(SimpleSQLParser.IdentifierContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleSQLParser.COMMA)
            else:
                return self.getToken(SimpleSQLParser.COMMA, i)

        def getRuleIndex(self):
            return SimpleSQLParser.RULE_columnList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnList" ):
                return visitor.visitColumnList(self)
            else:
                return visitor.visitChildren(self)




    def columnList(self):

        localctx = SimpleSQLParser.ColumnListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_columnList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.identifier()
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 95
                self.match(SimpleSQLParser.COMMA)
                self.state = 96
                self.identifier()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(SimpleSQLParser.IdentifierContext,0)


        def typeName(self):
            return self.getTypedRuleContext(SimpleSQLParser.TypeNameContext,0)


        def getRuleIndex(self):
            return SimpleSQLParser.RULE_columnDef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnDef" ):
                return visitor.visitColumnDef(self)
            else:
                return visitor.visitChildren(self)




    def columnDef(self):

        localctx = SimpleSQLParser.ColumnDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_columnDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.identifier()
            self.state = 103
            self.typeName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnDefListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def columnDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleSQLParser.ColumnDefContext)
            else:
                return self.getTypedRuleContext(SimpleSQLParser.ColumnDefContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleSQLParser.COMMA)
            else:
                return self.getToken(SimpleSQLParser.COMMA, i)

        def getRuleIndex(self):
            return SimpleSQLParser.RULE_columnDefList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnDefList" ):
                return visitor.visitColumnDefList(self)
            else:
                return visitor.visitChildren(self)




    def columnDefList(self):

        localctx = SimpleSQLParser.ColumnDefListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_columnDefList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.columnDef()
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 106
                self.match(SimpleSQLParser.COMMA)
                self.state = 107
                self.columnDef()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_T(self):
            return self.getToken(SimpleSQLParser.INT_T, 0)

        def BOOL_T(self):
            return self.getToken(SimpleSQLParser.BOOL_T, 0)

        def TEXT_T(self):
            return self.getToken(SimpleSQLParser.TEXT_T, 0)

        def getRuleIndex(self):
            return SimpleSQLParser.RULE_typeName

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeName" ):
                return visitor.visitTypeName(self)
            else:
                return visitor.visitChildren(self)




    def typeName(self):

        localctx = SimpleSQLParser.TypeNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_typeName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3670016) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def valueLit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleSQLParser.ValueLitContext)
            else:
                return self.getTypedRuleContext(SimpleSQLParser.ValueLitContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleSQLParser.COMMA)
            else:
                return self.getToken(SimpleSQLParser.COMMA, i)

        def getRuleIndex(self):
            return SimpleSQLParser.RULE_valueList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValueList" ):
                return visitor.visitValueList(self)
            else:
                return visitor.visitChildren(self)




    def valueList(self):

        localctx = SimpleSQLParser.ValueListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_valueList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.valueLit()
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 116
                self.match(SimpleSQLParser.COMMA)
                self.state = 117
                self.valueLit()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueLitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER_LITERAL(self):
            return self.getToken(SimpleSQLParser.INTEGER_LITERAL, 0)

        def TRUE(self):
            return self.getToken(SimpleSQLParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(SimpleSQLParser.FALSE, 0)

        def stringLiteral(self):
            return self.getTypedRuleContext(SimpleSQLParser.StringLiteralContext,0)


        def getRuleIndex(self):
            return SimpleSQLParser.RULE_valueLit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValueLit" ):
                return visitor.visitValueLit(self)
            else:
                return visitor.visitChildren(self)




    def valueLit(self):

        localctx = SimpleSQLParser.ValueLitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_valueLit)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.match(SimpleSQLParser.INTEGER_LITERAL)
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.match(SimpleSQLParser.TRUE)
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                self.match(SimpleSQLParser.FALSE)
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 4)
                self.state = 126
                self.stringLiteral()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def whereOr(self):
            return self.getTypedRuleContext(SimpleSQLParser.WhereOrContext,0)


        def getRuleIndex(self):
            return SimpleSQLParser.RULE_whereExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhereExpr" ):
                return visitor.visitWhereExpr(self)
            else:
                return visitor.visitChildren(self)




    def whereExpr(self):

        localctx = SimpleSQLParser.WhereExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_whereExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.whereOr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereOrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def whereAnd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleSQLParser.WhereAndContext)
            else:
                return self.getTypedRuleContext(SimpleSQLParser.WhereAndContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleSQLParser.OR)
            else:
                return self.getToken(SimpleSQLParser.OR, i)

        def getRuleIndex(self):
            return SimpleSQLParser.RULE_whereOr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhereOr" ):
                return visitor.visitWhereOr(self)
            else:
                return visitor.visitChildren(self)




    def whereOr(self):

        localctx = SimpleSQLParser.WhereOrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_whereOr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.whereAnd()
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 132
                self.match(SimpleSQLParser.OR)
                self.state = 133
                self.whereAnd()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereAndContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def whereAtom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleSQLParser.WhereAtomContext)
            else:
                return self.getTypedRuleContext(SimpleSQLParser.WhereAtomContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleSQLParser.AND)
            else:
                return self.getToken(SimpleSQLParser.AND, i)

        def getRuleIndex(self):
            return SimpleSQLParser.RULE_whereAnd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhereAnd" ):
                return visitor.visitWhereAnd(self)
            else:
                return visitor.visitChildren(self)




    def whereAnd(self):

        localctx = SimpleSQLParser.WhereAndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_whereAnd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.whereAtom()
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 140
                self.match(SimpleSQLParser.AND)
                self.state = 141
                self.whereAtom()
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereAtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(SimpleSQLParser.LPAREN, 0)

        def whereExpr(self):
            return self.getTypedRuleContext(SimpleSQLParser.WhereExprContext,0)


        def RPAREN(self):
            return self.getToken(SimpleSQLParser.RPAREN, 0)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleSQLParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(SimpleSQLParser.IdentifierContext,i)


        def EQ(self):
            return self.getToken(SimpleSQLParser.EQ, 0)

        def valueLit(self):
            return self.getTypedRuleContext(SimpleSQLParser.ValueLitContext,0)


        def getRuleIndex(self):
            return SimpleSQLParser.RULE_whereAtom

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhereAtom" ):
                return visitor.visitWhereAtom(self)
            else:
                return visitor.visitChildren(self)




    def whereAtom(self):
